# todo_app

./: Dockerfile  main.py  pyproject.toml
.github/workflows/: test-deploy.yml  test.yml
terraform-sample/iam/: iam_instance_profile.tf  iam_policy.tf  iam_role.tf  outputs.tf  providers.tf
terraform-sample/iam/iam_policies/: deploy_policy.json  ecs_instance_policy.json
terraform-sample/service/: instance.tf  security_group.tf  terraform_remote_state.tf
terraform-sample/vpc/: outputs.tf  providers.tf  public_route.tf  public_subnet.tf
test/: sample.tf
test/ec2/: ec2.tf
test/vpc/: vpc.tf
tests/: test_main.py
