[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Kenkentake <keeeentake0908@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
